# Haskell-Learning-Journal

./: .gitignore  .gitmodules  README.md  function-ex-01.hs  index.md  pattern-matching-on-tuples.hs  reverseSentence.hs
ch01-ch07/: case-expression-ex-01.hs  date-demo-data.hs  employee-demo-hof.hs  pattern-matching-ex-01.hs  pattern-matching-ex-02.hs  tuple.hs  very-first.hs
ch08-recursion-exercises/: mc-carthy-91.hs  number-to-word.hs  recursion-ex-01.hs
ch09-lists-exercises/: chapter-exercises.hs  filter-lists.hs  list-comprehension.hs  lists-01.hs  lists-enum.hs  transform-lists.hs
ch10-fold-exercises/: Notes.md  README.md  chapter-exercises.hs  database-ex.hs  fold-expmt-01.hs  how-to-write-folds.hs  reimplement-standard-functions.hs  scan-expmt-01.hs
ch11-algebraic-datatypes/: README.md  chapter-exercises.hs  exercise-programmers.hs  experiment-01.hs  normal-form-ex-01.hs  tree-exercise.hs
ch12-signalling-adeversity/: README.md  chapter-exercises.hs
ch13-buiding-projects/: hello-project.cabal
ch13-buiding-projects/hangman-game/: README.md  hangman-game.cabal
ch13-buiding-projects/hangman-game/src/: Main.hs
ch13-buiding-projects/hello-project/: README.md  hello-project.cabal
ch13-buiding-projects/hello-project/src/: Hello.hs  Main.hs
ch14-testing/addition/: Addition.hs  ProblemEulerOne.hs  README.md  addition.cabal
ch14-testing/morse-code/: LICENSE  morse-code.cabal
ch14-testing/morse-code/src/: Morse.hs
ch15-monoids-semigroups/: README.md  madness.hs  optional-monoid.hs
ch15-monoids-semigroups/chapter-exercises/: stack.yaml
ch15-monoids-semigroups/chapter-exercises/semigroup-exercises/: README.md  semigroup-exercises.cabal
ch15-monoids-semigroups/chapter-exercises/semigroup-exercises/src/: Main.hs  SemigroupExercises.hs
ch16-functors/: README.md  chapter-exercises.hs  functors-unique.hs  heavy-lifting.hs  natural-transformation.hs  possibly-either.hs  stack.yaml  wrapper.hs
ch16-functors/quickcheck-custom-functor/: README.md  quickcheck-custom-functor.cabal  stack.yaml
ch16-functors/quickcheck-custom-functor/src/: Main.hs  OtherFunctors.hs  ValidateFunctorLaws.hs
ch17-applicatives/: README.md  applicative-in-use.hs  chapter-exercises.hs
ch17-applicatives/property-test-applicatives/: README.md  property-test-applicatives.cabal  stack.yaml
ch17-applicatives/property-test-applicatives/src/: CustomTypes.hs  Main.hs
ch18-monads/: README.md  chapter-exercises.hs  custom-bind.hs  monad-composition.hs  monads-in-use.hs
ch18-monads/proptest-monads/: README.md  proptest-monads.cabal  stack.yaml
ch18-monads/proptest-monads/src/: CustomMonads.hs  Main.hs
ch20-foldables/: README.md  basic-derived-functions.hs  chapter-exercises.hs  foldables-in-use.hs
ch21-traversables/: README.md
ch21-traversables/do-all-the-things/: README.md  do-all-the-things.cabal  stack.yaml
ch21-traversables/do-all-the-things/src/: HTTPStuff.hs  Main.hs  QualityControl.hs
ch22-reader/: README.md  chapter-exercies.hs  end-chapter-exercises.hs  reader-examples.hs  reader.hs  warming-up.hs
ch23-state/: README.md  chapter-exercises.hs  fizzbuzz-differently.hs
ch23-state/roll-your-own/: LICENSE  README.md  package.yaml  roll-your-own.cabal
ch23-state/roll-your-own/src/: Main.hs
ch24-parser-combinators/: README.md
ch24-parser-combinators/trifecta-demo/: README.md  package.yaml  stack.yaml  trifecta-demo.cabal
ch24-parser-combinators/trifecta-demo/src/: AlternativeParsing.hs  Main.hs
ch24-parser-combinators/trifecta-demo/src/ChapterExercises/: ParsePhoneNum.hs  SemVer.hs
ch24-parser-combinators/trifecta-demo/src/main/: Main.hs  Marshalling.hs  ParsingConfigFile.hs  ParsingPractice.hs
ch25-composing-types/: IdentityT-Identity-Compose.hs  README.md  twinlicative.hs
ch26-monad-transformers/: EitherT.hs  README.md  ReaderT.hs  StateT.hs  wrap-it-up.hs
ch26-monad-transformers/MonadTransDemo/: Main.hs  MonadTransDemo.cabal  README.md  package.yaml  stack.yaml
ch26-monad-transformers/MonadTransDemo/src/: EitherT.hs  MaybeT.hs  MonadIO.hs  MonadTrans.hs  ReaderT.hs  StateT.hs
ch27-nonstrictness/: README.md  strict-list.hs
ch28-basic-libraries/: README.md  dlist.hs  large-CAF-demo.hs  large-CAF-demo.ps  queue.hs
ch29-IO/: README.md  chapter-exercise.hs
ch30-when-things-go-wrong/: README.md
