name:                morse-code
version:             0.1.0.0
synopsis:            Morse Code implementation
-- description:
license-file:        LICENSE
author:              MinhTu Thomas Hoang
copyright:           2020 MinhTu Thomas Hoang
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:   Morse
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.7 && <5 
                   , containers
                   , QuickCheck
  hs-source-dirs:    src
  default-language:  Haskell2010

executable morse
  main-is:           Main.hs
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.7 && <5 
                   , containers
                   , QuickCheck
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite tests
  ghc-options:       -Wall -fno-warn-orphans
  type:              exitcode-stdio-1.0
  main-is:           tests.hs
  hs-source-dirs:    tests
  build-depends:     base >=4.7 && <5 
                   , containers
                   , morse
                   , QuickCheck
  default-language:  Haskell2010