name:                do-all-the-things
version:             0.1.0.0
author:              MinhTu Thomas Hoang
maintainer:          minhtu.hoang19@gmail.com
copyright:           2020 MinhTu Thomas Hoang
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  exposed-modules:    HTTPStuff
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , wreq 
                    , bytestring

executable activate
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , QuickCheck
                     , checkers
                     , bytestring
