name:                semigroup-exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/semigroup-exercises#readme
license:             MIT
license-file:        LICENSE
author:              MinhTu Thomas Hoang
copyright:           2020 MinhTu Thomas Hoang
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     SemigroupExercises
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck

executable semigroup
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
